user/logs/stride-200813_112716.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Cool Cat\Documents\GitHub\Toontown-Old-Online\toontown\toonbase\ToontownStart.py", line 175, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 47, in <module>
    import PlayGame
  File "toontown\distributed\PlayGame.py", line 10, in <module>
    from toontown.hood import TTHood
  File "toontown\hood\TTHood.py", line 3, in <module>
    from toontown.town.TTTownLoader import TTTownLoader
  File "toontown\town\TTTownLoader.py", line 3, in <module>
    from toontown.town import TownLoader
  File "toontown\town\TownLoader.py", line 27
    zone2music = {
    ^
IndentationError: unexpected indent
